--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ a:active { color:yellow; }
 
 header {
   height: 80px;
-  width: 100%;
+  margin: 0;
   background-color: #000000;
   font-size: 1.6rem;
 }
