--- a/main.css
+++ b/main.css
@@ -14,7 +14,8 @@ a:active { color:yellow; }
 }
 
 header {
-  height: 100px;
+  height: 80px;
+  margin: auto;
   background-color: #000000;
   font-size: 1.6rem;
 }
